# libkatherine

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
c/: CMakeLists.txt  Doxyfile  katherine.pc.in
c/examples/: CMakeLists.txt  kfind.c  krun.c
c/include/katherine/: acquisition.h  bmc.h  command_interface.h  config.h  crd.h  device.h  global.h  katherine.h  md.h  px.h  px_config.h  status.h  udp.h  udp_nix.h  udp_win.h
c/src/: acquisition.c  bitfields.h  bmc.c  command_interface.h  config.c  crd.h  device.c  md.h  px_config.c  status.c  udp.c  udp_nix.c  udp_win.c
cxx/: CMakeLists.txt  katherinexx.pc.in
cxx/examples/: CMakeLists.txt  address_source.cpp  address_source.hpp  kfindxx.cpp  krunxx.cpp
cxx/include/katherinexx/: acquisition.hpp  bmc.hpp  config.hpp  device.hpp  error.hpp  katherinexx.hpp  px_config.hpp
include/katherine/: acquisition.h  bmc.h  command_interface.h  config.h  device.h
python/: .gitignore  CMakeLists.txt  cacquisition.pxd  cconfig.pxd  cdevice.pxd  cpx_config.pxd  cstatus.pxd  katherine.pyx  setup.py  setup.py.in
python/examples/: kfind.py  krun.py
src/: acquisition.c  bmc.c  config.c  device.c  udp.c
